Remove secrets from git and fix migrations

--- a/.env.dist
+++ b/.env.dist
@@ -4,7 +4,7 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=f97932e9d3c9c2bb9f6d121ef062884b
+APP_SECRET=somesecret
 #TRUSTED_PROXIES=127.0.0.1,127.0.0.2
 #TRUSTED_HOSTS=localhost,example.com
 ###< symfony/framework-bundle ###
