--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,8 @@ Thumbs.db
 *~
 xcuserstate
 xcuserdata
+
+###> friendsofphp/php-cs-fixer ###
+/.php_cs
+/.php_cs.cache
+###< friendsofphp/php-cs-fixer ###
