--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,8 +1,8 @@
 security:
 
     role_hierarchy:
-       ROLE_ADMIN: ROLE_ADMIN
-       ROLE_USER:  ROLE_USER
+        ROLE_ADMIN: ROLE_ADMIN
+        ROLE_USER:  ROLE_USER
 
     encoders:
         App\Entity\User:
@@ -28,7 +28,7 @@ security:
                 default_target_path: /
             guard:
                 authenticators:
-                    - App\Security\LoginFormAuthenticator
+                - App\Security\LoginFormAuthenticator
             logout:
                 path: app_logout
 
@@ -44,5 +44,7 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the first access control that matches will be used
     access_control:
+        - { path: ^/api, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/admin, roles: ROLE_ADMIN }
         - { path: ^/home, roles: ROLE_USER }
+
